added blur effect (text-shadow + box-shadow)

--- a/notify-osd.css
+++ b/notify-osd.css
@@ -7,10 +7,10 @@
     width:350px;
     background-color:#222222;
     color:#ffffff;
+    border-radius:4px;
     -webkit-border-radius:4px;
     -moz-border-radius:4px;
     z-index:900;
-    box-shadow:0 0 10px #222;
 }
 .notify-osd:hover {
     cursor:default !important;
