--- a/notify-osd.css
+++ b/notify-osd.css
@@ -1,3 +1,6 @@
+img {
+    border:none;
+}
 .notify-osd {
     font-family:Helvetica Neue,Helvetica,Arial,'Liberation Sans',FreeSans,sans-serif;
     font-size:14px;
