--- a/notify-osd.css
+++ b/notify-osd.css
@@ -35,8 +35,8 @@ img {
     position:absolute;
     top:3px;
     right:10px;
-    text-decoration:none;
     z-index:999;
+    cursor:pointer;
 }
 .notify-osd td.notify-osd-icon {
     height:48px;
